<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_alc"
            android:textSize="@dimen/profile_name_size"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.175"
            android:id="@+id/welcome_text_view" android:fontFamily="serif"/>
    <Button
            android:text="@string/about_alc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/about_alc_button"
            android:textAllCaps="true"
            app:layout_constraintTop_toBottomOf="@+id/welcome_text_view" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/welcome_text_view"
            app:layout_constraintEnd_toEndOf="@+id/welcome_text_view" app:layout_constraintHorizontal_bias="0.636"
            app:layout_constraintVertical_bias="0.352" android:background="@android:color/holo_orange_dark"
            android:fontFamily="serif" android:textColor="@android:color/background_dark" android:padding="4dp"/>
    <Button
            android:text="@string/my_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/about_me_button"
            android:textAllCaps="true"
            app:layout_constraintTop_toBottomOf="@+id/about_alc_button" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@+id/about_alc_button"
            app:layout_constraintStart_toStartOf="@+id/about_alc_button"
            android:background="@android:color/holo_orange_dark" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.275" android:fontFamily="serif"
            android:textColor="@android:color/background_dark" android:padding="4dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>